<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Donate" >

    <TextView
        android:id="@+id/donateTitle"
        android:layout_columnSpan="3"
        android:layout_gravity="left"
        android:text="@string/donateTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/donateSubtitle"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="left"
        android:text="@string/donateSubtitle"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:ignore="RtlHardcoded" />

    <RadioGroup
        android:id="@+id/paymentMethod"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="left"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="26dp"
        tools:ignore="RtlHardcoded" >

        <RadioButton
            android:id="@+id/PayPal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/PayPal" />

        <RadioButton
            android:id="@+id/Direct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Direct" />
    </RadioGroup>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="left"
        android:layout_marginBottom="67dp"
        tools:ignore="RtlHardcoded" />

    <NumberPicker
        android:id="@+id/amountPicker"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="left"
        android:layout_row="2"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/amountText"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_row="4"
        android:ems="10"
        android:inputType="number"
        tools:ignore="RtlHardcoded" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/amountLabel"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="4"
        android:labelFor="@id/amountText"
        android:text="@string/amount"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/donateButton"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="left"
        android:layout_marginBottom="15dp"
        android:onClick="donateButtonPressed"
        android:text="@string/donateButton"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/amountTotal"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="5"
        android:text="@string/initialAmount"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/totalLabel"
        android:layout_gravity="left"
        android:text="@string/amountSoFarLabel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:ignore="RtlHardcoded" />

    <Space
        android:layout_column="3"
        android:layout_gravity="fill_vertical"
        android:layout_row="6" />

</GridLayout>
